Fix Dark Mode

--- a/site-source/css/style.css
+++ b/site-source/css/style.css
@@ -62,8 +62,9 @@ div#app:empty:before {
 }
 
 .search input {
-    padding      : 0 20px !important;
+    padding      : 0 20px ;
     border-radius: 20px;
+    background: none;
 }
 
 
@@ -90,7 +91,7 @@ kbd {
     border        : 1px solid #ccc;
     border-radius : 3px;
     display       : inline-block;
-    font-size     : 12px !important;
+    font-size     : 12px ;
     line-height   : 12px;
     margin-bottom : 3px;
     padding       : 3px 5px;
@@ -383,7 +384,7 @@ body.sticky .sidebar-toggle {
 }
 
 .markdown-section>:first-child {
-    margin-top: 0 !important
+    margin-top: 0 
 }
 
 .markdown-section hr {
@@ -727,7 +728,7 @@ section.cover blockquote>p>a:hover {
     color: var(--theme-color, #7B69C8)
 }
 
-.sidebar,
+/* .sidebar, */
 body {
     background-color: #fff
 }
@@ -1051,9 +1052,9 @@ pre:after {
 
 
 .btn-float-ios {
-    border-style      : none!important;
-    background-color  : transparent!important;
-    color             : #7B69C8!important;
+    border-style      : none;
+    background-color  : transparent;
+    color             : #7B69C8;
 
 }
 
@@ -1064,7 +1065,7 @@ pre:after {
 }
 
 .btn-float-ios:visited {
-    color       : #7B69C8!important;
+    color       : #7B69C8;
 }
 
 .btn-float:hover {
@@ -1152,7 +1153,7 @@ pre:after {
 
 .dark-theme .sidebar {
     border-right: 1px solid rgba(255, 255, 255, 0.07);
-    background  : #343a40;
+    /* background  : #343a40; */
 }
 
 .dark-theme .sidebar:hover::-webkit-scrollbar-thumb {
@@ -1174,7 +1175,7 @@ pre:after {
 }
 
 .dark-theme .search input {
-    background: #343a40;
+    /* background: #343a40; */
     color     : #f1f3f5
 }
 
@@ -1183,7 +1184,7 @@ pre:after {
 }
 
 .dark-theme aside.sidebar {
-    background: #343a40;
+    /* background: #343a40; */
     color     : #f1f3f5
 }
 
@@ -1262,7 +1263,7 @@ pre:after {
     color: var(--theme-color, #CEC3FF);
 }
 
-.dark-theme .sidebar,
+/* .dark-theme .sidebar, */
 .dark-theme body {
     background-color: #fff;
 }
@@ -1403,7 +1404,7 @@ pre:after {
 }
 
 .dark-theme .btn-float-ios {
-    color    : #CEC3FF!important;
+    color    : #CEC3FF;
 }
 
 .dark-theme .btn-float:visited {
@@ -1412,7 +1413,7 @@ pre:after {
 }
 
 .dark-theme .btn-float-ios:visited {
-    color       :#CEC3FF!important;
+    color       :#CEC3FF;
 }
 
 .dark-theme .btn-float:hover {
@@ -1422,15 +1423,15 @@ pre:after {
 }
 
 .dark-theme .btn-float2:hover {
-    color           : #CEC3FF!important;
+    color           : #CEC3FF;
 }
 
 body, main, .mask, .sidebar, input {
-    transition: color 0.5s ease-in-out, background 1s ease-in-out, background-color 1s ease-in-out !important;
+    transition: color 0.5s ease-in-out, background 1s ease-in-out, background-color 1s ease-in-out ;
 }
 
 .box {
-    transition: color 0s !important;
+    transition: color 0s ;
 }
 
 /* img box */
